--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.19.0",
+    "@prisma/client": "^5.19.1",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "daisyui": "^4.12.10",
     "next": "14.2.6",
     "next-auth": "^4.24.7",
@@ -18,6 +20,8 @@
     "tcc_search": "file:"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -25,7 +29,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.6",
     "postcss": "^8.4.41",
-    "prisma": "^5.19.0",
+    "prisma": "^5.19.1",
     "tailwindcss": "^3.4.10",
     "typescript": "^5"
   }
